tests/ui/span/visibility-ty-params.stderr
error: unexpected generic arguments in path
  --> $DIR/visibility-ty-params.rs:6:6
   |
LL | m!{ S<u8> }
   |      ^^^^

error[E0433]: failed to resolve: `S` is a struct, not a module
  --> $DIR/visibility-ty-params.rs:6:5
   |
LL | m!{ S<u8> }
   |     ^ `S` is a struct, not a module

error: unexpected generic arguments in path
  --> $DIR/visibility-ty-params.rs:10:10
   |
LL |     m!{ m<> }
   |          ^^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0433`.
